--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jest": "^29.5.0",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^4.6.3",
