--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "private": true,
   "description": "demo project with real-time functionalities using Azure Web PubSub",
   "scripts": {
-    "test": "tsoa spec-and-routes && jest --coverage -i",
     "run-prod": "node dist/src/app.js",
     "build": "tsoa spec-and-routes && tsc",
-    "start": "tsoa spec-and-routes && tsc && ts-node --esm ./src/app.ts",
-    "sonar": "npx jest --coverage"
+    "start": "tsoa spec-and-routes && tsc && ts-node --esm ./src/app.ts"
   },
   "author": "pjp13579",
   "license": "ISC",
