--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "pjp13579",
   "license": "ISC",
   "dependencies": {
+    "@azure/web-pubsub": "^1.1.1",
+    "@azure/web-pubsub-client": "^1.0.0-beta.3",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
